<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/controller_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/controller_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="130dp">

        <Button
            android:id="@+id/prev_slide"
            android:layout_width="wrap_content"
            android:layout_height="148dp"
            android:layout_weight="1"
            android:text="@string/prev_slide" />

        <Button
            android:id="@+id/next_slide"
            android:layout_width="wrap_content"
            android:layout_height="149dp"
            android:layout_weight="1"
            android:text="@string/next_slide" />
    </LinearLayout>
</LinearLayout>